<resources>
    <string name="app_name">EventAnalyser</string>

    <string name="title_activity_menu">Menu</string>
    <string name="button_tutorial">Tutorial</string>
    <string name="button_analysis">Event Analysis</string>
    <string name="button_settings">Change settings</string>
    <string name="button_about">About</string>
    <string name="title_activity_analysis_main">Analysis</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="return_to_menu">Return to menu</string>
    <string name="lept_no">Number of charged leptons:</string>
    <string name="min_trans_mom">Minimum transverse momentum (GeV):</string>
    <string name="no_jets">Number of jets:</string>
    <string name="bTag_jets">Any b-tagged jets?</string>
    <string name="min">Min:</string>
    <string name="max">Max:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button_analyse">Analyse</string>
    <string name="lept_min_mass">Minimum transverse mass:</string>
    <string name="lept_max_mass">Maximum transverse mass:</string>
    <string name="title">Event Analyser</string>
    <string name="bTag_max_label">9</string>
    <string name="pref_title_add_friends_to_messages">delete</string>
    <string name="lept_flavour">Choose lepton flavour</string>
    <string name="lept_charge">Choose lepton charge</string>
    <string name="flavour_same">Same flavour</string>
    <string name="flavour_diff">Different flavour</string>
    <string name="charge_same">Same charge</string>
    <string name="charge_diff">Different charge</string>
    <string name="miss_trans_mom_label">Missing transverse momentum (GeV):</string>
    <string name="percent_data_label">Percentage of data to analyse:</string>
    <string name="back_button">Back</string>
    <string name="hist_description">Histogram for chosen values</string>
    <string name="setSamples_label">Choose samples to analyse:</string>
    <string name="diboson">Diboson processes:</string>
    <string name="WW_label">WW</string>
    <string name="ZZ_label">ZZ</string>
    <string name="WZ">WZ</string>
    <string name="single_top">Single top quark processes:</string>
</resources>
